# village_simulator

./: .gitignore  CMakeLists.txt
src/: Building.cpp  Building.h  Components.h  Game.cpp  Game.h  House.cpp  House.h  Market.cpp  Market.h  Menu.cpp  Menu.h  MenuOption.cpp  MenuOption.h  Vec2.cpp  Vec2.h  main.cpp
